ingressroute-sampleapp-01.yaml
# whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`essa.apps.glop.pasglop`)
      kind: Rule
      services:
        - name: whoami
          port: 80
